# ec2-flask-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/: alb.tf  data.tf  iam-role.tf  main.tf  provider.tf  tfplan  variables.tf  vpc.tf
infra/scripts/: user_data.sh
infra_backend/: .terraform.lock.hcl  bucket.tf  dynamodb-table.tf  ecr.tf  provider.tf
src/: api.py
